# gosim-project

./: .gitignore  Cargo.toml  README.MD  compare.json  project-overview.md
backend_hook/: Cargo.toml  G_api.html  README.MD  gosim_api.html
backend_hook/src/: lib.rs
issue_bot/: Cargo.toml
issue_bot/src/: lib.rs
migrations/: 20240308202145_gosim.sql  misc_ops.sql
register_hook/: Cargo.toml  README.MD  gen-verifier.ts  query.sh
register_hook/src/: lib.rs  query.gql
src/: db_join.rs  db_manipulate.rs  db_populate.rs  db_updater.rs  issue_bot.rs  issue_paced_tracker.rs  issue_tracker.rs  lib.rs  llm_utils.rs  llm_utils_together.rs  the_paced_runner.rs  the_runner.rs  vector_search.rs
src/joiners/: 1_open_comment_master.sql  2_close_pull_master.sql  3_open_master_project.sql
src/query_responses/: mock_user.gql  search_assignees_comments_by_node_id.gql  search_issues_assign_comment.gql  search_issues_assigned.gql  search_issues_by_nodeId.gql  search_issues_closed.gql  search_issues_comment.gql  search_issues_open.gql  search_issues_updated.gql  search_issues_w_update_comments.gql  search_pull_requests.gql  search_pull_requests.json  search_repo_by_name.gql
tester_hook/: Cargo.toml  query.sh
tester_hook/src/: lib.rs
track_github/: Cargo.toml
track_github/src/: lib.rs
