[package]
name = "gosim_project"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = [ "lib"]
# crate-type = ["cdylib", "lib"]


[workspace]
members = ["register_hook", "track_github", "backend_hook", "tester_hook"]

[dependencies]
tokio_wasi = { version = "1", features = ["macros", "rt"] }
anyhow = "1"
dotenv = "0.15.0"
mysql_async_wasi = "0.31.5"
# hyper_wasi = { version = "0.15", features = ["full"] }
# tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }

serde_json = "1.0.97"
serde = { version = "1", features = ["derive"] }
flowsnet-platform-sdk = "0.1.3"
log = "0.4.14"
schedule-flows = "0.3.0"
chrono = "0.4.31"
base64 = "0.21.5"
regex = "1.10.3"
http_req_wasi = { version = "0.11.1", features = ["wasmedge_rustls"] }
urlencoding = "2.1.3"
wasmedge_wasi_socket = "0.4.3"
lazy_static = "1.4.0"
github-flows = "0.7.0"
# wasmedge_wasi_socket = {version = "0.4.3", features = ["wasi"]}
