[package]
name = "backend_hook"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
gosim_project = { path = "../" }
tokio_wasi = { version = "1", features = ["macros", "rt"] }
anyhow = "1"
dotenv = "0.15.0"
mysql_async_wasi = "0.31.5"
serde_json = "1.0.97"
serde = { version = "1", features = ["derive"] }
flowsnet-platform-sdk = "0.1.3"
log = "0.4.14"
chrono = "0.4.31"
wasmedge_wasi_socket = "0.4.3"
webhook-flows = "0.4.4"
