[package]
name = "issue_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[workspace]


# [dependencies]
# tokio_wasi = { version = "1", features = ["macros", "rt"] }
# anyhow = "1"
# dotenv = "0.15.0"
# # mysql_async_wasi = "0.31.5"
# # hyper_wasi = { version = "0.15", features = ["full"] }
# # tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }

# serde_json = "1.0.97"
# serde = { version = "1", features = ["derive"] }
# flowsnet-platform-sdk = "0.1.3"
# log = "0.4.14"
# chrono = "0.4.31"
# base64 = "0.21.5"
# octocrab_wasi = "0.19.1"
# github-flows = "0.7.0"
# schedule-flows = "0.3.0"


[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
# mio = { git = "https://github.com/second-state/wasi_mio.git", branch = "v0.8.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }

[dependencies]
env_logger = "0.11.2"
http = "1.1.0"
hyper = { version = "0.14" }
hyper-rustls = { version = "0.25", default-features = false, features = [
    "http1",
    "tls12",
    "logging",
    "ring",
    "webpki-tokio",
] }


rustls = { version = "0.22", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

tokio = { version = "1", features = ["full"] }
webpki-roots = "0.26.1"