[package]
name = "track_github"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
gosim_project = { path = "../" }
tokio_wasi = { version = "1", features = ["macros", "rt"] }
anyhow = "1"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.3"
log = "0.4.14"
schedule-flows = "0.3.0"
chrono = "0.4.31"
lazy_static = "1.4.0"


